--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "com.jamesonsaunders.houstonzoo",
+  "appId": "5fd953f1ccfa6.site123.me",
   "appName": "Houston Zoo",
   "bundledWebRuntime": false,
   "npmClient": "npm",
