--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,6 +1,6 @@
 {
   "appId": "com.jamesonsaunders.houstonzoo",
-  "appName": "Houston Zoo",
+  "appName": "Createivo",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "www",
